--- a/.github/workflows/code_scan.yml
+++ b/.github/workflows/code_scan.yml
@@ -17,7 +17,7 @@ jobs:
       with:
         python-version: '3.x'
 
-    - name: Install Bandit
+    - name: Install Bandit and jq
       run: |
         python -m pip install --upgrade pip
         pip install bandit jq
@@ -37,7 +37,8 @@ jobs:
         else
           echo "No critical or above vulnerabilities found by Bandit."
           curl -X POST -H "Authorization: token ${{ secrets.GITHUB_TOKEN }}" -d "{\"body\": \"Successful\"}" "https://api.github.com/repos/${{ github.repository }}/issues/${{ github.event.pull_request.number }}/comments"
-          
+        fi
+
     - name: Merge Pull Request
       if: github.event_name == 'pull_request' && github.event.action == 'opened' && steps.bandit.outputs.severity == ''
       run: |
