--- a/.github/workflows/code_scan.yml
+++ b/.github/workflows/code_scan.yml
@@ -21,21 +21,23 @@ jobs:
           
       - name: Check for critical vulnerabilities
         run: |
+          #!/bin/bash
           # Parse Bandit output JSON
-          import json
-
-          with open('bandit_output.json') as f:
-          bandit_output = json.load(f)
-
+          bandit_output=$(<bandit_output.json)
           # Iterate over all files and check vulnerability counts
-          for file_path, metrics in bandit_output['metrics'].items():
-          critical_count = metrics['SEVERITY.HIGH']
-          high_count = metrics['SEVERITY.MEDIUM']
-
-          if critical_count > 0 or high_count > 0:
-            echo "Critical or High vulnerability found in file: $file_path"
-          exit 1
-
+          while IFS= read -r line; do
+            if [[ $line == *"SEVERITY.HIGH"* ]]; then
+              file_path=$(echo "$line" | jq -r 'keys[]')
+              critical_count=$(echo "$line" | jq -r '.SEVERITY.HIGH')
+              high_count=$(echo "$line" | jq -r '.SEVERITY.MEDIUM')
+            if (( critical_count > 0 )) || (( high_count > 0 )); then
+              echo "Critical or High vulnerability found in file: $file_path"
+              exit 1
+            fi
+            fi
+            done <<< "$(echo "$bandit_output" | jq -r '.metrics | to_entries[] | .value')"
+          exit 0
+      
       - name: Get repository information
         id: repo_info
         run: |
