--- a/.github/workflows/code_scan.yml
+++ b/.github/workflows/code_scan.yml
@@ -53,7 +53,7 @@ jobs:
           comment="Critical or High vulnerabilities found. Pull request blocked. See Bandit output for details."
           headers='{"Authorization": "Bearer ${{ secrets.GITHUB_TOKEN }}", "Accept": "application/vnd.github.v3+json"}'
           data='{"body": "'"$comment"'"}'
-          response=$(curl -X POST -H "Content-Type: application/json" -d "$data" "https://api.github.com/repos/${{ github.repository_owner }}/${{ github.repository_name }}/issues/${{ github.event.issue.number }}/comments" -H "$headers")
+          response=$(curl -X POST -H "Content-Type: application/json" -d "$data" "https://api.github.com/repos/${{ github.repository_owner }}/${{ github.repository_name }}issues/${{ github.event.issue.number }}comments" -H "$headers")
           echo $response
 
       - name: Comment and Auto-Merge Pull Request (if success)
@@ -62,5 +62,5 @@ jobs:
          comment="No critical vulnerabilities found. Pull request merged."
          headers='{"Authorization": "Bearer ${{ secrets.GITHUB_TOKEN }}", "Accept": "application/vnd.github.v3+json"}'
          data='{"body": "'"$comment"'"}'
-         response=$(curl -X POST -H "Content-Type: application/json" -d "$data" "https://api.github.com/repos/${{ github.repository_owner }}/${{ github.repository_name }}/issues/${{ github.event.issue.number }}/comments" -H "$headers")
+         response=$(curl -X POST -H "Content-Type: application/json" -d "$data" "https://api.github.com/repos/${{ github.repository_owner }}/${{ github.repository_name }}issues/${{ github.event.issue.number }}comments" -H "$headers")
          echo $response
