--- a/.github/workflows/code_scan.yml
+++ b/.github/workflows/code_scan.yml
@@ -22,7 +22,7 @@ jobs:
           bandit -r . -f json -o bandit_output.json || true
           cat bandit_output.json  # Display Bandit output
 
-          # Parse Bandit output JSON
+       
       - name: Parse Bandit output JSON
         run: |
           # Parse Bandit output JSON
@@ -33,15 +33,15 @@ jobs:
           # Extract counts of HIGH and MEDIUM vulnerabilities
           while IFS= read -r line; do
               if [[ $line == *'"SEVERITY.HIGH":'* ]]; then
-                high_count=$((high_count + $(echo "$line" | jq -r '.["SEVERITY.HIGH"]')))
+                  high_count=$((high_count + $(echo "$line" | jq -r '.["SEVERITY"]["HIGH"]')))
               elif [[ $line == *'"SEVERITY.MEDIUM":'* ]]; then
-                 medium_count=$((medium_count + $(echo "$line" | jq -r '.["SEVERITY.MEDIUM"]')))
+                  medium_count=$((medium_count + $(echo "$line" | jq -r '.["SEVERITY"]["MEDIUM"]')))
               fi
-            done <<< "$(echo "$bandit_output" | jq -r '.metrics | to_entries[] | .value')"
+          done <<< "$(echo "$bandit_output" | jq -r '.metrics | to_entries[] | .value')"
           # Check if HIGH or MEDIUM count is greater than 0
           if (( high_count > 0 )) || (( medium_count > 0 )); then
-            echo "Critical or High vulnerability found! Blocking commit."
+              echo "Critical or High vulnerability found! Blocking commit."
           exit 1
           else
-            echo "No critical or high vulnerabilities found. Commit allowed."
+              echo "No critical or high vulnerabilities found. Commit allowed."
           fi
