--- a/.github/workflows/code_scan.yml
+++ b/.github/workflows/code_scan.yml
@@ -11,27 +11,26 @@ jobs:
       - name: Checkout code
         uses: actions/checkout@v2
 
-      - name: Install jq
-        run: sudo apt-get install jq -y
-
       - name: Install dependencies
-        run: pip install bandit
+        run: |
+          sudo apt-get update
+          sudo apt-get install -y jq
+          pip install bandit
 
       - name: Run Bandit
         run: |
           bandit -r . -f json -o bandit_output.json || true
           cat bandit_output.json  # Display Bandit output
 
-       
       - name: Parse Bandit output JSON
         run: |
           # Parse Bandit output JSON
           bandit_output=$(<bandit_output.json)
           # Extract counts of HIGH and MEDIUM vulnerabilities using jq
-          high_count=$(echo "$bandit_output" | jq '[.metrics[] | .["SEVERITY"]["HIGH"] // 0] | add')
-          medium_count=$(echo "$bandit_output" | jq '[.metrics[] | .["SEVERITY"]["MEDIUM"] // 0] | add')
+          high_count=$(echo "$bandit_output" | jq '[.results[] | select(.issue_severity == "HIGH")] | length')
+          medium_count=$(echo "$bandit_output" | jq '[.results[] | select(.issue_severity == "MEDIUM")] | length')
           # Check if HIGH or MEDIUM count is greater than 0
-          if (( high_count > 0 )) || (( medium_count > 0 )); then
+          if [ "$high_count" -gt 0 ] || [ "$medium_count" -gt 0 ]; then
               echo "Critical or High vulnerability found! Blocking commit."
               exit 1
           else
