--- a/.github/workflows/code_scan.yml
+++ b/.github/workflows/code_scan.yml
@@ -16,40 +16,23 @@ jobs:
           sudo apt-get update
           sudo apt-get install -y jq
           pip install bandit
-          
+
       - name: Run Bandit
         run: |
           bandit -r . -f json -o bandit_output.json || true
+          cat bandit_output.json  # Display Bandit output
 
-      - name: Parse Bandit Output
-        id: parse_output
+      - name: Parse Bandit output JSON
         run: |
           # Parse Bandit output JSON
           bandit_output=$(<bandit_output.json)
           # Extract counts of HIGH and MEDIUM vulnerabilities using jq
-          high_count=$(echo "$bandit_output" | jq '[.metrics[] | .["SEVERITY"]["HIGH"] // 0] | add')
-          medium_count=$(echo "$bandit_output" | jq '[.metrics[] | .["SEVERITY"]["MEDIUM"] // 0] | add')
-
+          high_count=$(echo "$bandit_output" | jq '[.results[] | select(.issue_severity == "HIGH")] | length')
+          medium_count=$(echo "$bandit_output" | jq '[.results[] | select(.issue_severity == "MEDIUM")] | length')
           # Check if HIGH or MEDIUM count is greater than 0
-          if (( high_count > 0 )) || (( medium_count > 0 )); then
+          if [ "$high_count" -gt 0 ] || [ "$medium_count" -gt 0 ]; then
               echo "Critical or High vulnerability found! Blocking commit."
-              echo "::set-output name=status::fail"
+              exit 1
           else
               echo "No critical or high vulnerabilities found. Commit allowed."
-              echo "::set-output name=status::success"
           fi
-
-      - name: Add Comment to PR
-        run: |
-          if [[ "${{ steps.parse_output.outputs.status }}" == "fail" ]]; then
-            comment="Block"
-          else
-            comment="Successful"
-          fi
-          curl -s -H "Authorization: token ${{ secrets.GITHUB_TOKEN }}" \
-               -X POST -d "{\"body\":\"$comment\"}" \
-               "https://api.github.com/repos/${{ github.repository_owner }}/${{ github.event.repository.name }}/issues/${{ github.event.number }}/comments"
-
-      - name: Block Commit on Failure
-        if: steps.parse_output.outputs.status == 'fail'
-        run: exit 1
